separate  token handler